--- a/CountDominance.tex
+++ b/CountDominance.tex
@@ -52,10 +52,10 @@
 	
 	To date, published methodological work has extended DA from the linear regression model on which it was originally developed, to generalized linear models including binary \cite{azen2009using}, ordered, and multinomial logit models \cite{luchman2014relative}.	
 	This work extends DA to CRMs and makes four contributions to the literature.
-	This work first reviews DA as a relative importance methodology provides an accessible discussion of the relationship between DA and Shapley value decomposition.
+	This work first reviews DA as a relative importance methodology and provides an accessible discussion of the relationship between DA and Shapley value decomposition.
 	As I will show, DA methods derive directly from and extend on Shapley value decomposition; a method developed in cooperative game theory to distribute game payoffs to players.
 	Statistical models are analogous to cooperative games and, in highlighting the relationship between these two methodologies, this work demonstrates the applicability of DA to CRMs as well as other statistical models and fit statistics that are used describe those models.
-	In addition, the analogy between statistical models and cooperative games is useful as a way to think about how importance is determined and can make the abstract concepts discussed in this work more concrete.
+	%revisit #1 here to be sure I do it as described
 	
 	Second, this work recommends using a specific pseudo-$R^2$ statistic for CRM-based DA and implements multiple data analytic examples of DA with that statistic.
 	Despite the applicability of DA to any model fit statistic that could be computed for a CRM, pseudo-$R^2$ values are valuable for DA due to their interpretability. 
@@ -99,99 +99,114 @@
 	DA achieves order independence by comparing the two focal IVs' $R^2$ values across sub-models that contain all combinations of the non-focal IVs including the null set of no other non-focal IVs.	
 	In this way, the dominance comparisons produced by DA do not depend on the order of IV inclusion and, indeed, require that an IV obtain a higher value than another IV irrespective of inclusion of other non-focal IVs.
 	
-	As an example of how the dominance comparison is implemented, consider a model with 4 IVs: $IV_x$, $IV_z$, $IV_w$ and $IV_v$.
-	If the dominance comparison was focusing on $IV_x$ versus $IV_z$, there would be a total of 3 possible $R^2$ comparisons: $R^2_{Y \sim IV_x + IV_w}$ versus $R^2_{Y \sim IV_z + IV_w}$; $R^2_{Y \sim IV_x + IV_v}$ versus $R^2_{Y \sim IV_z + IV_w}$; and $R^2_{Y \sim IV_x}$ versus $R^2_{Y \sim IV_z}$; where the subscripted model indicates the form of the linear regression equation in symbolic form (i.e., similar to an R formula interface) and $Y$ is the DV.
-	$IV_x$ dominates $IV_z$ only when all the sub-model $R^2$ values that include $IV_x$ are greater than the sub-model $R^2$ values that include $IV_z$'s values across all three of these sub-models.
+	As an example of how the dominance comparison is implemented, consider a model with 4 IVs: $IV_x$, $IV_z$, $IV_w$ and $IV_v$ predicting $Y$.
+	If the dominance comparison was focusing on $IV_x$ versus $IV_z$, there would be a total of 3 possible $R^2$ comparisons each of which is outlined below in Table \ref{tab:exdom}.
+	In each comparison, the subscripted model indicates the form of the linear regression equation in symbolic form (i.e., similar to an R formula interface).
+	$IV_x$ dominates $IV_z$ only when all the sub-model $R^2$ values that include $IV_x$ are greater than the sub-model $R^2$ values that include $IV_z$ across all three of these sub-models.
 	The dominance comparison described in this section has, more recently, been named complete dominance and has been recognized as the most stringent, or hardest to achieve, dominance designation in a series of three possible designations \cite{azen2003dominance}.	
+
+		\begin{table}[h!]
+			\centering
+			\caption{\centering Example Dominance Comparisons}
+			\begin{tabular}{ l | l l }
+				
+				& Sub-model with $IV_x$ & Sub-model with $IV_z$ \\
+				\hline
+				Across null set/no other IVs & $R^2_{Y \sim IV_x}$ & $R^2_{Y \sim IV_z}$ \\
+				Comparing across $IV_w$ & $R^2_{Y \sim IV_x + IV_w}$ & $R^2_{Y \sim IV_z + IV_w}$ \\
+				Comparing across $IV_v$ & $R^2_{Y \sim IV_x + IV_v}$ & $R^2_{Y \sim IV_z + IV_v}$ \\
+				Comparing across both $IV_w$ and $IV_v$ & $R^2_{Y \sim IV_x + IV_w + IV_v}$ & $R^2_{Y \sim IV_z + IV_w + IV_v}$ \\
+				\hline
+		\end{tabular}
+		\label{tab:exdom}
+	\end{table}
 	
 	\subsection{Complete Dominance}
 	
 	Complete dominance is the most stringent of the dominance designations as it is a difficult designation for an IV to achieve over another.
 	Complete dominance is difficult to achieve as it involves direct comparisons between IVs at the level of individual sub-models' $R^2$ values.
-	The reason this designation is so difficult to achieve is non-compensatory; all sub-model $R^2$ value comparisons must favor one IV over another or the designation will fail to be achieved.
-	I also offer the reader an alternative interpretation of complete domiance that I believe is more intuitive but does require some explanation and a re-thinking of what a statistical model is does.
+	The reason this designation is so difficult to achieve is that it is non-compensatory; all sub-model $R^2$ value comparisons must favor one IV over another or the designation will fail to be achieved.
 	
-	Imagine, if you will, that linear regression is actually a kind of matching game.
-	The objective of the game for the players to work together to devise a set of numbers for themselves and their teammates such that they match their game piece values to the goal pieces' values subject to a specific rule.
-	The goal piece values in this case are those of the DV across all observations.
-	The game piece values for the players are similarly the IVs values across all observations.
-	The specific rule to which the players must adhere is that the numbers divised must have squared deviations from the goal pieces that sum to the smallest possible value.
-	The numbers the players assign to themselves in this case are the linear regression coefficients.
+	One alternative way of looking at the process of determining complete dominance is to see it as an experiment conducted on the predictive model.
+	Specifically, if the inclusion or exclusion of each IV in the full model is considered a factor in this experiment, conditional dominance is the process of comparing the values simple effects for $IV_x$ to those for $IV_z$ across the full-factorial of levels of the other $p -2$ IVs.	
 	
-	... ended review here ...
+	The process for determining complete dominance between two IVs, $IV_x$ and $IV_z$ with an arbitrary number of IVs in the model ($p$) can also be defined symbolically as:
 	
-	devise a single number for themselves
+	\begin{equation}
+		IV_x D IV_z \iff \forall u \in U_n: R^2_{Y \sim IV_x + \{u\}} > R^2_{Y \sim IV_z + \{u\}}
+		\label{eq:cptdom}
+	\end{equation}
+	% fix symbolic logic here
 	
-	In this matching game, the observations are game pieces, and the  number such that, when this single number is 
+	Hence, for all subsets of IVs $u$ in the pool of all possible $2^{p - 2}$ combinations of IVs not including  $IV_x$ and $IV_z$ (i.e., $U_n$), the $R^2$ that includes $IV_x$ must be greater than the $R^2$ that includes $IV_z$.
+	The $D$ in this case is a designation indicating complete dominance of the left hand IV over the right hand IV.
 	
-	The IVs in the model are players in this game.
-	The IVs play this game by taking their pieces,
+	Ultimately, if $IV_x$ completely dominates $IV_z$ as is outlined in Equation \ref{eq:cptdom}, $IV_x$ has bested $IV_z$ 
+	in all possible directly comparable ways in the model.
+	As such, when $IV_x$ completely dominates $IV_z$, it clearly explains more of $Y$, and is thus more important for explaining differences observed in $Y$, in the model
 	
-	
-	columns of a dataset are not IVs but players in a game and the data represented by them in rows are 'information' each knows about the DV
-	
-	omplete dominance can also be interpreted 
-	
-	
-	Complete dominance designation is then the process of making $k = 2^{p - 2}$ comparisons for each IV pair (i.e., between $IV_x$ and $IV_z$) in which $R^2_{E_q + IV_x} > R^2_{E_q + IV_z}$ where $E$ represents a subset of the IVs excluding $IV_x$ and $IV_z$, and $q$ is a number from 1 to $k$ representing a distinct combination of the $p - 2$ IVs.
-		
-	... expand here and tie into complete dominance... ask reader to consider this a competition ...
-	
-	
-	Specifically, complete dominance makes comparisons between the $R^2$ values associated with $IV_x$ and $IV_z$ across all sub-models where the other $p - 2$ IVs in the model (i.e., not including $IV_x$ and $IV_z$) can be used as controls.
-	For instance, if $IV_x$ and $IV_z$ were in an LRM with $IV_w$ and $IV_v$, then there would be a total of 3 possible $R^2$ comparisons : $R^2_{IV_x + IV_w}$ versus $R^2_{IV_z + IV_w}$; $R^2_{IV_x + IV_v}$ versus $R^2_{IV_z + IV_w}$; and $R^2_{IV_x}$ versus $R^2_{IV_z}$; where the subscripted IVs indicate which IVs are included in the sub-model.
-	Note that the $R^2$ values associated with each IV are compared to one another directly and that $IV_x$ and $IV_z$ are always compared to one another holding other IVs in the sub-model constant.
-	
-
-	Complete dominance is determined for $IV_x$ when $IV_x$ \emph{always} produces a bigger increment to explained variance when it is in a sub-model compared to when it is replaced with $IV_z$ across \emph{all} sub-models of other IVs (i.e., all $k$ IV sets; $E_q$) in the model. 
-	
-	The complete dominance designation process is akin to a multi-round competition between the two competing IVs ($IV_x$, $IV_z$) where both of the competing IVs are required to make coalitions with the other, non-competing IVs (e.g., $IV_w$ and $IV_v$). 
-	The results of all rounds in the competition are then paired to one another based on the composition of competing IVs' coalitions and their values are compared.
-	If $IV_x$ completely dominates $IV_z$, $IV_x$ has bested $IV_z$ in the competition both by itself and across all possible coalitions with other non-competing IVs. 
-	As such, when $IV_x$ completely dominates $IV_z$, it is clearly better at explaining variance in the model.
-	
-	
-	
-	...
-	
-		
-	These comparisons have been formalized into three different levels of dominance between IVs \cite{azen2003dominance} where each level of dominance has a different implied strength or level of stringency. 
-	I interpret these stringency levels as the extent to which the comparisons between the IVs must be in order to determine that one IV, for example $IV_x$, is dominates another IV, for example $IV_z$.
-	
-	The pairwise comparisons bet
-	
-	At this point I ask the reader to change their frame of mind about what DA is and how it is computed.
-	
-	
-	
-	All comparisons between IVs are based on the $R^2$ associated with each IV in different sub-models of the full LRM model including all $p$ IVs (which includes both $IV_x$ and $IV_z$).
-	The $R^2$ value for each sub-model is also assumed to be obtained from an LRM that has been re-fit to the data.
-	
-	
-	Complete dominance is a difficult requirement to meet for IV pairs as it can only be met when all $k$ comparisons favor one IV over the other.
-	When a researcher cannot determine complete dominance between pairs IVs, they can attempt to make other dominance designations between the IVs that involve averaging the $R^2$ values.
+	Because complete dominance is a difficult criterion to achieve in comparing two IVs, alternative, less-stringent and more compensatory, dominance designations have been proposed to provide more ways to compare the predictive usefulness of IVs against one another.
+	The criteria used in the sections to come involve averaging the $R^2$ values associated with the IVs in the comparison and comparing those resultant averages.
 	
 	\subsection{Conditional Dominance}
 	
 	A less stringent dominance designation between IV pairs than complete dominance is called conditional dominance.
-	Conditional dominance relaxes the stringency of the comparisons across pairs of IVs by changing the focus from comparing $R^2$ values from individual sub-models to averages of $R^2$ increments across sub-models.
-	The average $R^2$ values compared in designating conditional dominance acknowledge that, as more IVs are added to a model, the likely incremental contribution any one IV can make to the $R^2$ shrinks.
-	Thus, the average $R^2$ values compared in conditional dominance designation are based on the number of IVs that are included in the sub-model.	
-	Determining conditional dominance then involves grouping the sub-models by the number of IVs that are included in it and computing the average incremental contributions to the $R^2$ within those groups.
+	Conditional dominance relaxes the stringency of the comparisons across pairs of IVs by changing the focus from comparing $R^2$ values of individual sub-models to averages of $R^2$ increments across sub-models.
+	By comparing averages of $R^2$ increments, as opposed to individual sub-model $R^2$ values, conditional dominance allows for some sub-models with higher values of $R^2$ increments to compensate for sub-models with lower values of $R^2$ increments in the averaging.
+	Thus, it is more likely that an IV will be determined to be conditionally dominant over another given a set of sub-model $R^2$ values.
 	
-	The average incremental $R^2$ computed for determining conditional dominance are known as conditional dominance statistics.
-	In the example above, $IV_x$ has four different conditional dominance statistics. 
-	The first conditional dominance statistic is the average increment $IV_x$ makes to the model with one IV included.
-	This value is $R^2_{IV_x} - 0$ as the value of the $R^2$ with no IVs is 0.
-	The second conditional dominance statistic is the average increment $IV_x$ makes with two IVs in the model.
-	This value is the arithmetic average of $R^2_{IV_x + IV_z} - R^2_{IV_z}$, $R^2_{IV_x + IV_w} - R^2_{IV_w}$, and $R^2_{IV_x + IV_v} - R^2_{IV_v}$.
-	The third conditional dominance statistic is the average increment $IV_x$ makes with three IVs in the model.
-	This value is the arithmetic average of $R^2_{IV_x + IV_z + IV_w} - R^2_{IV_z + IV_w}$, $R^2_{IV_x + IV_w + IV_v} - R^2_{IV_w + IV_v}$, and $R^2_{IV_x + IV_z + IV_v} - R^2_{IV_z + IV_v}$.
-	Finally, the fourth conditional dominance statistic is the average increment $IV_x$ makes with four IVs in the model.
-	This value is $R^2_{IV_x + IV_z + IV_w + IV_v} - R^2_{IV_z + IV_w + IV_v}$.
+	The specific comparisons made to determine conditional dominance of one IV over another focus on the average increment an IV makes to the $R^2$ with a specific number of IVs in the sub-model.
+	The averages are aggregated by the number of IVs in the sub-model as it is necessarily the case that, as more IVs are added to a model, the incremental contribution any one IV can make to the $R^2$ shrinks.
+	Hence, conditional dominance designations acknowledge that increments to the $R^2$ are best compared in the context of the number of IVs in the model.	
+	
+	The average increments to the $R^2$ computed for determining conditional dominance are known as conditional dominance statistics.
+	Each IV has a conditional dominance statistic for each number of IVs in the model. 
+	Thus, with $p$ IVs, each IV will have $p$ conditional dominance statistics to compare.
+	Extending on Table \ref{tab:exdom}, determining conditional dominance between $IV_x$ and $IV_z$ would involve all four different conditional dominance statistics as it outlined below in Table \ref{tab:excdl}.
+	
+	\begin{table}[h!]
+		\centering
+		\caption{\centering Example Conditional Dominance}
+		\begin{tabular}{ l | l l }
+			Comparing at & Average with $IV_x$ & Average with $IV_z$ \\
+			\hline
+			One IV & $\Delta R^2_{Y \sim IV_x + \{\emptyset\}}$ & $\Delta R^2_{Y \sim IV_z + \{\emptyset\}}$ \\
+			\hline
+			& $(\Delta R^2_{Y \sim IV_x + \{IV_w\}})\frac{1}{3} + $ & $(\Delta R^2_{Y \sim IV_z + \{IV_w\}})\frac{1}{3} + $ \\
+			Two IVs & $(\Delta R^2_{Y \sim IV_x + \{IV_v\}})\frac{1}{3} + $ & $(\Delta R^2_{Y \sim IV_z + \{IV_v\}})\frac{1}{3} + $ \\
+			& $(\Delta R^2_{Y \sim IV_x + \{IV_z\}})\frac{1}{3}$ & $(\Delta R^2_{Y \sim IV_z + \{IV_x\}})\frac{1}{3}$ \\
+			\hline
+			& $(\Delta R^2_{Y \sim IV_x + \{IV_w + IV_v\}})\frac{1}{3} + $ & $(\Delta R^2_{Y \sim IV_z + \{IV_w + IV_v\}})\frac{1}{3} + $ \\
+			Three IVs & $(\Delta R^2_{Y \sim IV_x + \{IV_w + IV_z\}})\frac{1}{3} + $ & $(\Delta R^2_{Y \sim IV_z + \{IV_w + IV_x\}})\frac{1}{3} + $ \\
+			& $(\Delta R^2_{Y \sim IV_x - \{IV_v + IV_z\}})\frac{1}{3}$ & $(\Delta R^2_{Y \sim IV_v + \{IV_w + IV_x\}})\frac{1}{3}$ \\
+			\hline
+			Four IVs & $\Delta R^2_{Y \sim IV_x + \{IV_w + IV_v + IV_z\}}$ & $\Delta R^2_{Y \sim IV_v + \{IV_w + IV_w + IV_x\}}$ \\
+			\hline
+		\end{tabular}
+		\label{tab:excdl}
+	\end{table}
+	
+	The $\Delta$ indicates that the values in Table \ref{tab:excdl} reflect that the $R^2$ value is an increment made by the first IV beyond the subset of IVs in braces.
+	For the first set of conditional dominance statistics, at one IV, the $\emptyset$ indicates the null set with no IVs--thus, is the $R^2$ with the IV by itself in a subset.
+	Note that, unlike complete dominance designations that exclude $R^2$ subset values that include the IV against which the focal IV is being compared, conditional dominance designations are not IV pair-specific and the computation to produce the complete dominance statistics include all IVs.
+	
+	... ended here...
+	
+	The computations in Table \ref{tab:excdl} can be generalized
+	
+	\begin{equation}
+		C^{i}_{IV_x} = \frac{\Sigma^{c}_{j} \Delta R^2_{IV_x + \{o_j\}}}{c}
+		\label{eq:cdlst}
+	\end{equation}
 	
 	Conditional dominance designation is then the process of making $p$ comparisons for each IV pair in which $\bar{\Delta R^2_{IV^l_x}} > \bar{\Delta R^2_{IV^l_z}}$ where the $l$ superscript for each IV represents a number between 1 and $p$ indicating the number of IVs in the sub-model (i.e., the grouping factor for the averages) and $\Delta R^2$ indicates an increment to the $R^2$ associated with an IV, and the bar (i.e., $\bar{ }$ ) above the values indicates an arithmetic average. 
 	Conditional dominance is determined for $IV_x$ when $IV_x$ \emph{always} has a larger average incremental $R^2$ value compared to the compared to $IV_z$ across \emph{all} IV number-grouped averages/conditional dominance statistics.
+	
+		\begin{equation}
+		IV_x D_c IV_z \iff \bigcup^p_i C^{i}_{IV_x} > C^{i}_{IV_z}
+		\label{eq:cdldom}
+		\end{equation}
+	% fix symbolic logic here
 	
 	The conditional dominance designation process is similar to complete dominance in that it is also a multi-round competition between the two competing IVs ($IV_x, IV_z$) but the values used in the comparison are differ substantially.  
 	In conditional dominance, the values are based on the increment the competing IV makes to the IV coalition, the competitor IV can be a member of the coalition (i.e., the conditional dominance statistic for $IV_x$ can include $IV_z$ as a coalition member), and the values are averaged over the number of IVs in the coalition.
